Get public resource all
